--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = awashderash
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.hira.coopay.customer.awashderash
+PRODUCT_BUNDLE_IDENTIFIER = com.hira.coopay.customer
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.hira.coopay.customer. All rights reserved.
