--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,28 +1,32 @@
 name: awashderash
 description: AwashDerash
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  intl: ^0.18.1
   carousel_slider: ^4.2.1
   google_sign_in: ^6.1.5
   firebase_auth: ^4.10.0
+  firebase_ui_auth: ^1.7.0
+  firebase_ui_oauth_apple: ^1.2.10
+  firebase_ui_oauth_facebook: ^1.2.8
+  firebase_ui_oauth_google: ^1.2.10
+  firebase_ui_oauth_twitter: ^1.2.10
+  package_config: ^2.1.0
+  firebase_core: ^2.16.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
 
   flutter_lints: ^2.0.0
 
@@ -35,16 +39,18 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - asset/immage/hotel1.jpeg
-  - asset/immage/hotel2.jpeg
-  - asset/immage/hotel3.jpeg
-  - asset/immage/hotel4.jpeg
-  - asset/immage/hotel5.jpeg
-  - asset/todo/todologo.jpg
-  - asset/common/google.png
-  - asset/common/linkedin.png
-  - asset/common/facebook.png
-  - asset/common/lock.png
+    - asset/immage/hotel1.jpeg
+    - asset/immage/hotel2.jpeg
+    - asset/immage/hotel3.jpeg
+    - asset/immage/hotel4.jpeg
+    - asset/immage/hotel5.jpeg
+    - asset/todo/todologo.jpg
+    - asset/common/google.png
+    - asset/common/apple.png
+    - asset/common/linkedin.png
+    - asset/common/facebook.png
+    - asset/common/lock.png
+    - asset/common/apple1.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
