--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   firebase_ui_oauth_twitter: ^1.2.10
   package_config: ^2.1.0
   firebase_core: ^2.16.0
-
+  msh_checkbox: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +52,45 @@ flutter:
     - asset/common/lock.png
     - asset/common/apple1.png
     - asset/cm.jpeg
+    - asset/todo/add.png
+    - android/
+    - android/app/
+    - android/app/src/
+    - android/app/src/main/
+    - android/app/src/main/res/
+    - android/app/src/main/res/values/
+    - android/app/src/main/res/drawable/
+    - android/app/src/main/res/mipmap-hdpi/
+    - android/app/src/main/res/mipmap-mdpi/
+    - android/app/src/main/res/drawable-v21/
+    - android/app/src/main/res/mipmap-xhdpi/
+    - android/app/src/main/res/values-night/
+    - android/app/src/main/res/mipmap-xxhdpi/
+    - android/app/src/main/res/mipmap-xxxhdpi/
+    - android/app/src/main/java/
+    - android/app/src/main/java/io/
+    - android/app/src/main/java/io/flutter/
+    - android/app/src/main/java/io/flutter/plugins/
+    - android/app/src/main/kotlin/
+    - android/app/src/main/kotlin/com/
+    - android/app/src/main/kotlin/com/hira/
+    - android/app/src/main/kotlin/com/hira/coopay/
+    - android/app/src/main/kotlin/com/hira/coopay/customer/
+    - android/app/src/main/kotlin/com/hira/coopay/customer/awashderash/
+    - android/app/src/debug/
+    - android/app/src/profile/
+    - android/gradle/
+    - android/gradle/wrapper/
+    - android/.gradle/
+    - android/.gradle/7.5/
+    - android/.gradle/7.5/checksums/
+    - android/.gradle/7.5/fileHashes/
+    - android/.gradle/7.5/fileChanges/
+    - android/.gradle/7.5/vcsMetadata/
+    - android/.gradle/7.5/executionHistory/
+    - android/.gradle/7.5/dependencies-accessors/
+    - android/.gradle/vcs-1/
+    - android/.gradle/buildOutputCleanup/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
