--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   package_config: ^2.1.0
   firebase_core: ^2.16.0
   msh_checkbox: ^2.0.1
+  date_format: ^2.0.7
+  datetime_picker_formfield_new: ^2.1.0
 
 dev_dependencies:
   flutter_test:
