--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   msh_checkbox: ^2.0.1
   date_format: ^2.0.7
   datetime_picker_formfield_new: ^2.1.0
+  get: ^4.6.6
+  dots_indicator: ^3.0.0
+  syncfusion_flutter_pdfviewer: ^23.1.40
 
 dev_dependencies:
   flutter_test:
@@ -41,18 +44,20 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - asset/immage/hotel1.jpeg
-    - asset/immage/hotel2.jpeg
-    - asset/immage/hotel3.jpeg
-    - asset/immage/hotel4.jpeg
-    - asset/immage/hotel5.jpeg
+    - asset/image/
+#    - asset/immage/hotel1.jpeg
+#    - asset/immage/hotel2.jpeg
+#    - asset/immage/hotel3.jpeg
+#    - asset/immage/hotel4.jpeg
+#    - asset/immage/hotel5.jpeg
     - asset/todo/todologo.jpg
-    - asset/common/google.png
-    - asset/common/apple.png
-    - asset/common/linkedin.png
-    - asset/common/facebook.png
-    - asset/common/lock.png
-    - asset/common/apple1.png
+    - asset/commom/
+#    - asset/common/google.png
+#    - asset/common/apple.png
+#    - asset/common/linkedin.png
+#    - asset/common/facebook.png
+#    - asset/common/lock.png
+#    - asset/common/apple1.png
     - asset/cm.jpeg
     - asset/todo/add.png
 
